--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "^15",
-    "@toolpad/core": "^0.14.0",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@mui/icons-material": "^7",
     "@mui/material": "^7",
     "@mui/material-nextjs": "^7",
-    "@mui/icons-material": "^7",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11"
+    "@toolpad/core": "^0.14.0",
+    "next": "^15",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@netlify/plugin-nextjs": "^5.11.4",
     "@types/node": "^20.19.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^8",
-    "eslint-config-next": "^15"
+    "eslint-config-next": "^15",
+    "typescript": "^5"
   }
 }
